# claw-crew

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/avatars/: README.md
config/: roster.yaml
docs/: MAINTENANCE.md  ORG.md  STATE.md  blake-knowledge.md  crew-review-2026-07-04.md  openclaw-org-pull.md
docs/archive/: README.md  crew-review-2026-07-04.md
src/clawcrew/: __init__.py  agent.py  claude_client.py  cli.py  config.py  manifest.py  memory.py  orchestrator.py  provision.py  slack_admin.py
tests/: test_agent.py  test_confer.py  test_config.py  test_directory.py  test_leave.py  test_linkify.py  test_manifest.py  test_memory.py  test_provision.py  test_slack_admin.py
