[project]
name = "claw-crew"
version = "0.1.0"
description = "Open Claw: a crew of Claude-backed Slack agents that share rooms and DMs."
requires-python = ">=3.10"
dependencies = [
    "slack-bolt>=1.18,<2",
    "slack-sdk>=3.27,<4",
    "anthropic>=0.40",
    "PyYAML>=6.0",
]

[project.scripts]
claw-crew = "clawcrew.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
